<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="5dp">
    <LinearLayout
        android:id="@+id/linearLayout_primeraFila"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView_linea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/linea"/>
        <TextView
            android:id="@+id/textView_separadorLinea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/separador"/>
        <TextView
            android:id="@+id/textView_nombreLinea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout_segundaFila"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView_bus1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:text="@string/primerBus"/>
        <TextView
            android:id="@+id/textView_separadorBus1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/separador"/>
        <TextView
            android:id="@+id/textView_tiempoBus1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/textView_separadorTiempoBus1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/separador"/>
        <TextView
            android:id="@+id/textView_minBus1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:text="@string/minutos"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout_terceraFila"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView_bus2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:text="@string/segundoBus"/>
        <TextView
            android:id="@+id/textView_separadorBus2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/separador"/>
        <TextView
            android:id="@+id/textView_tiempoBus2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/textView_separadorTiempoBus2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/separador"/>
        <TextView
            android:id="@+id/textView_minBus2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:text="@string/minutos"/>
    </LinearLayout>
</LinearLayout>